[MacViews] Anchor Bookmarks bubble to top-right corner.

Currently Bookmarks bubble is anchored to center-top, so its right part
may be displayed offscreen. Regression happened after this CL:
https://codereview.chromium.org/1759453002/patch/240001/250007
which defer anchoring to LocationBarBubbleDelegateView (which in it's
turn uses NONE arrow, and makes center-top anchoring).

bookmark_bubble_view.cc was the only bubble that lost its explicit TOP_RIGHT.
So other bubbles don't need a similar update. Regression affects MacViews,
but not other platforms, because other platforms infer a TOP_RIGHT in
location_bar_bubble_delegate_view.cc. MacViews does not, because it's
anchored to a point, not a View.

This change restores anchoring to top right and does not impact other platforms
(tested on Windows). The change makes MacViews version worse in RTL, because
omnibox is not mirrored on mac. Since omnibox will be mirrored eventually,
leaving it as it is.

BUG=600209

Review-Url: https://codereview.chromium.org/2351593002
Cr-Commit-Position: refs/heads/master@{#419877}

Former-commit-id: a9f2053a36b4899fb312bec01a3362f65eafe785